[package]
name = "influxdb3_processing_engine_telemetry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hashbrown.workspace = true
influxdb3_catalog = { path = "../influxdb3_catalog" }
influxdb3_telemetry = { path = "../influxdb3_telemetry" }
parking_lot.workspace = true

[lints]
workspace = true
