[package]
name = "influxdb3_py_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
hashbrown.workspace = true
humantime.workspace = true
influxdb3_catalog = { path = "../influxdb3_catalog" }
influxdb3_id = { path = "../influxdb3_id" }
influxdb3_types = { path = "../influxdb3_types" }
iox_time.workspace = true
observability_deps.workspace = true
parking_lot.workspace = true
# `lock_api` enables `MutexExt::lock_py_attached` for `parking_lot::Mutex`
pyo3 = { workspace = true, features = ["lock_api"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
